--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@
   /** tertiary **/
   --ion-color-tertiary: #e0eaee;
   // --ion-color-tertiary-rgb: 112, 68, 255;
-  // --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast: #1f2b5d;
   // --ion-color-tertiary-contrast-rgb: 255, 255, 255;
   // --ion-color-tertiary-shade: #633ce0;
   // --ion-color-tertiary-tint: #7e57ff;
