--- a/src/app/pages/tesste/tesste.page.html
+++ b/src/app/pages/tesste/tesste.page.html
@@ -5,38 +5,37 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-range color="danger" pin="true"></ion-range>
-    </ion-item>
   
-    <ion-item>
-      <ion-range min="-200" max="200" color="secondary">
-        <ion-label slot="start">-200</ion-label>
-        <ion-label slot="end">200</ion-label>
-      </ion-range>
-    </ion-item>
+  <!-- <img id="clipped" src="https://mdn.mozillademos.org/files/12668/MDN.svg"
+  alt="MDN logo"> -->
+  <!-- <ion-button id="clipped"></ion-button> 
+  <svg height="0" width="0">
+    <defs>
+      <clipPath id="cross" clipPathUnits="objectBoundingBox">
+        <path d="M0.5,1
+        C 0.5,1,0,0.7,0,0.3
+        A 0.25,0.25,1,1,1,0.5,0.3
+        A 0.25,0.25,1,1,1,1,0.3
+        C 1,0.7,0.5,1,0.5,1 Z" />
+      </clipPath>
+    </defs>
+  </svg> -->
   
-    <ion-item>
-      <ion-range min="20" max="80" step="2">
-   
-      </ion-range>
-    </ion-item>
-  
-    <ion-item >
-      <ion-label>Altura</ion-label>
-      <ion-range  min="1" max="3" step="1"  snaps="true"color="secondary" (ionChange)="altura($event)">
-        <ion-label slot="start">maior</ion-label>
-        <ion-label slot="end">menor</ion-label>
-      </ion-range>
-    </ion-item>
-  
-    <ion-item>
-      <ion-range min="1000" max="2000" step="100" snaps="true" ticks="false" color="secondary"></ion-range>
-    </ion-item>
-  
-    <ion-item>
-      <ion-range dualKnobs="true" min="21" max="72" step="3" snaps="true"  ticks="true"></ion-range>
-    </ion-item>
-  </ion-list>
+  <ion-button id="capacete"></ion-button>
+  <svg height="0" width="0">
+    <defs>
+      <clipPath id="cap" clipPathUnits="objectBoundingBox">
+        <path d="M0.5,1
+        A 0.25,0.25,1,1,0,0.5,0.5
+        "
+
+         />
+      </clipPath>
+    </defs>
+  </svg>
+
 </ion-content>
+<!-- C 0.5,1,0,0.7,0,0.3
+A 0.25,0.25,1,1,1,0.5,0.3
+A 0.25,0.25,1,1,1,1,0.3
+C 1,0.7,0.5,1,0.5,1 Z -->
