--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,7 +10,7 @@
   /** primary **/
   --ion-color-primary:   #1f2b5d;
   // --ion-color-primary-rgb: 56, 128, 255;
-  // --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: #ffffff;
   // --ion-color-primary-contrast-rgb: 255, 255, 255;
   // --ion-color-primary-shade: #3171e0;
   // --ion-color-primary-tint: #4c8dff;
@@ -18,7 +18,7 @@
   /** secondary **/
   --ion-color-secondary: #b11f24;
   // --ion-color-secondary-rgb: 12, 209, 232;
-  // --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast: #ffffff;
   // --ion-color-secondary-contrast-rgb: 255, 255, 255;
   // --ion-color-secondary-shade: #0bb8cc;
   // --ion-color-secondary-tint: #24d6ea;
