--- a/src/app/pages/tesste/tesste.page.scss
+++ b/src/app/pages/tesste/tesste.page.scss
@@ -33,3 +33,8 @@ svg{
     height: 20%;
     clip-path: url(#cap);
   }
+
+  ion-range{
+    --bar-background:black;
+    --bar-background-active: black;
+  }
