--- a/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
+++ b/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
@@ -1,56 +1,80 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Comportamento do oponente</ion-title>
-  </ion-toolbar>
-</ion-header> 
 
-<ion-content>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentconservador_ousado($event)">
-      <ion-label slot="start">Conservador</ion-label>
-      <ion-label slot="end">Ousado</ion-label>
-    </ion-range>
-     <ion-icon name="help" (click)="help('conservador_ousado')"></ion-icon>
+<ion-header >
+  <ion-toolbar color="primary">
+    <ion-button id="backButton" fill="clear" (click)="voltar()">
+      <ion-icon name="ios-arrow-back"></ion-icon>
+    </ion-button>
+    <ion-title>Comportamento do oponente</ion-title>      
+  </ion-toolbar>
+</ion-header>
+
+<ion-content color='tertiary'>
+  
+  <ion-item lines="none">
+    <ion-label slot="start">Conservador</ion-label>
+    <ion-label slot="end">Ousado</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentinconstante_constante($event)">
-      <ion-label slot="start">Inconstante</ion-label>
-      <ion-label slot="end">Constante</ion-label>
+  <ion-item lines="none" class="item_range"> 
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="segmentconservador_ousado($event)" mode="ios"> 
+    </ion-range>
+    <ion-icon name="help" (click)="help('conservador_ousado')"></ion-icon>
+  </ion-item> 
+  
+  <ion-item lines="none">
+    <ion-label slot="start">Inconstante</ion-label>
+    <ion-label  class="label_end" slot="end">Constante</ion-label>
+  </ion-item>
+  <ion-item lines="none" class="item_range">
+    <ion-range min="1" max="3" step="1" snaps="true"   (ionChange)="segmentinconstante_constante($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('inconstante_constante')"></ion-icon>
   </ion-item>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentinseguro_confiante($event)">
-      <ion-label slot="start">Inseguro</ion-label>
-      <ion-label slot="end">Confiante</ion-label>
-    </ion-range>
-    <ion-icon name="help" (click)="help('inseguro_confiante')"></ion-icon>
+  
+  
+  <ion-item lines="none">
+    <ion-label slot="start">Inseguro</ion-label>
+    <ion-label  class="label_end" slot="end">Confiante</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentpressionado_controlado($event)">
-      <ion-label slot="start">Pressionado</ion-label>
-      <ion-label slot="end">Controlado</ion-label>
+  <ion-item  lines="none" class="item_range"> 
+    <ion-range min="1" max="3" step="1" snaps="true"  (ionChange)="segmentinseguro_confiante($event)" mode="ios">
+    </ion-range>
+    <ion-icon name="help" (click)="help('inseguro_confiante')"></ion-icon>   
+  </ion-item>
+  
+  <ion-item lines="none">
+    <ion-label slot="start">Pressionado</ion-label>
+    <ion-label class="label_end_maior" slot="end">Controlado</ion-label>
+  </ion-item>
+  <ion-item  lines="none" class="item_range">
+    <ion-range min="1" max="3" step="1" snaps="true"   (ionChange)="segmentpressionado_controlado($event)" mode="ios">
     </ion-range>
     <ion-icon name="help" (click)="help('pressionado_controlado')"></ion-icon>
   </ion-item>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentprovocativa_respeitosa($event)">
-      <ion-label slot="start">Provocativa</ion-label>
-      <ion-label slot="end">Respeitosa</ion-label>
-    </ion-range>
+  
+  <ion-item lines="none">
+    <ion-label slot="start">Provocativa</ion-label>
+    <ion-label class="label_end" slot="end">Respeitosa</ion-label>
+  </ion-item>
+  <ion-item  lines="none" class="item_range">
+    <ion-range min="1" max="3" step="1" snaps="true"   (ionChange)="segmentprovocativa_respeitosa($event)" mode="ios"> 
+    </ion-range>    
     <ion-icon name="help" (click)="help('provocativa_respeitosa')"></ion-icon>
   </ion-item>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentpassiva_ativa($event)">
-      <ion-label slot="start">Passiva</ion-label> 
-      <ion-label slot="end">Ativa</ion-label>
-    </ion-range>
-    <ion-icon name="help" (click)="help('passiva_ativa')"></ion-icon>
+  
+  <ion-item lines="none" >
+    <ion-label slot="start">Passiva</ion-label> 
+    <ion-label  slot="end">Ativa</ion-label>
   </ion-item>
-
-  <ion-button (click)="concluir()" expand="block">
+  <ion-item  lines="none" class="item_range">
+    <ion-range min="1" max="3" step="1" snaps="true"  (ionChange)="segmentpassiva_ativa($event)" mode="ios">
+    </ion-range>
+    <ion-icon name="help" (click)="help('passiva_ativa')"></ion-icon>     
+  </ion-item>
+  
+  
+  <ion-button id="botao_confirmar" (click)="concluir()" shape="round" color="secondary">
     <!-- [disabled]="!valido"> -->
-    Confirma
+    Confirmar
   </ion-button>
- 
+  
 </ion-content>
